# product-eng-exercise

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
api/: package.json  tsconfig.json
api/src/: data.json  endpoint.ts  server.ts
apy/: .gitignore  app.py  pyproject.toml
web/: index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json
web/src/: App.tsx  Feedback.tsx  FeedbackDataTable.tsx  FeedbackFilter.tsx  FeedbackFilterDisplay.tsx  Groups.tsx  hooks.ts  main.tsx
web/src/components/: DataTable.tsx  FeedbackContent.tsx  FeedbackDataTable.tsx  FeedbackFilter.tsx  FeedbackFilterDisplay.tsx  FeedbackFilterDisplayItem.tsx  FeedbackFiltersSection.tsx  FilterDialog.tsx  FilterDrilldown.tsx  FilterPopover.tsx  FilterSelect.tsx  GroupsDataTable.tsx  NavTabs.tsx  RelationPopover.tsx  RenderAttribute.tsx  SubfilterItem.tsx
web/src/components/ui/: DataTable.tsx  command.tsx  dialog.tsx
web/src/lib/: FeedbackFilterContext.tsx  hooks.ts  useFeedbackFilter.ts  useFeedbackFilter.tsx  utils.ts
